[package]
name = "rpi-led"
description = "Raspberry Pi Neopixel helper"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/dotcypress/rpi-led"
version = "0.0.1"
edition = "2024"

[dependencies]
rppal = { version = "0.22.1", features = ["embedded-hal"] }
smart-leds = "0.4.0"
ws2812-spi = "0.5.1"

[features]
grb = []
